--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,11 +1,11 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000033}}
+/* line 3, ../scss/main.scss */
 body {
   background: #fafafa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000039}}
+/* line 9, ../scss/main.scss */
 .hero-unit {
   margin: 50px auto 0 auto;
   width: 300px;
@@ -17,7 +17,7 @@ body {
   border-radius: 6px;
   padding: 60px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\0000320}}
+/* line 20, ../scss/main.scss */
 .hero-unit h1 {
   font-size: 3em;
   line-height: 0.5em;
