--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,70 +1,25 @@
-/*
-Syntax error: Invalid CSS after "...und-color: rgb(": expected ")", was ";"
-        on line 15 of /Users/patricklocal/Projects/map-attack/app/scss/main.scss
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000033}}
+body {
+  background: #fafafa;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
+}
 
-Backtrace:
-/Users/patricklocal/Projects/map-attack/app/scss/main.scss:15
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1147:in `expected'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/lexer.rb:199:in `expected!'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:476:in `assert_tok'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:332:in `funcall'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:319:in `ident'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:228:in `unary_not'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:228:in `unary_div'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:228:in `unary_minus'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:228:in `unary_plus'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `times_div_or_mod'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `plus_or_minus'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `relational'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `eq_or_neq'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `and_expr'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:209:in `or_expr'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:298:in `space'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:283:in `interpolation'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:246:in `expr'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:470:in `assert_expr'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/parser.rb:49:in `parse'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1021:in `sass_script'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:881:in `value!'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:858:in `declaration'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:581:in `block in declaration_or_ruleset'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1121:in `call'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1121:in `rethrow'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:591:in `declaration_or_ruleset'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:553:in `block_child'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:545:in `block_contents'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:534:in `block'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:528:in `ruleset'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:552:in `block_child'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:545:in `block_contents'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:82:in `stylesheet'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:27:in `parse'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:342:in `_to_tree'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:315:in `_render'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:262:in `render'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:146:in `block (2 levels) in compile'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:132:in `timed'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:145:in `block in compile'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/logger.rb:46:in `red'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:144:in `compile'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:124:in `compile_if_required'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:109:in `block (2 levels) in run'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:107:in `each'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:107:in `block in run'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:132:in `timed'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/compiler.rb:106:in `run'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/commands/update_project.rb:45:in `perform'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/commands/base.rb:18:in `execute'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/commands/project_base.rb:19:in `execute'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/bin/compass:30:in `block in <top (required)>'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/bin/compass:44:in `call'
-/usr/local/Cellar/ruby/1.9.3-p194/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.4/bin/compass:44:in `<top (required)>'
-/usr/local/Cellar/ruby/1.9.3-p194/bin/compass:23:in `load'
-/usr/local/Cellar/ruby/1.9.3-p194/bin/compass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Invalid CSS after \"...und-color: rgb(\": expected \")\", was \";\"\A         on line 15 of /Users/patricklocal/Projects/map-attack/app/scss/main.scss"; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000039}}
+.hero-unit {
+  margin: 50px auto 0 auto;
+  width: 300px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  background-color: red;
+  color: white;
+  border-radius: 6px;
+  padding: 60px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\0000320}}
+.hero-unit h1 {
+  font-size: 3em;
+  line-height: 0.5em;
+  letter-spacing: -1px;
+}
