--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -19,7 +19,7 @@ $body-weight:    400 !default;
 $header-weight:  600 !default;
 
 // Font Colors
-$body-color:     $gray;
+$body-color:     $darker-gray;
 $header-color:   $dark-gray;
 
 // Font Sizes
