--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,25 +1,72 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000033}}
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-}
+/*
+Syntax error: Undefined variable: "$light-gray".
+        on line 80 of /Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/base/_forms.scss
+        from line 6 of /Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/main.scss
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\000039}}
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: red;
-  color: white;
-  border-radius: 6px;
-  padding: 60px;
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/patricklocal\/Projects\/map-attack\/app\/scss\/main\.scss}line{font-family:\0000320}}
-.hero-unit h1 {
-  font-size: 3em;
-  line-height: 0.5em;
-  letter-spacing: -1px;
-}
+Backtrace:
+/Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/base/_forms.scss:80
+/Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/main.scss:6
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/variable.rb:49:in `_perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/node.rb:40:in `perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/list.rb:70:in `block in _perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/list.rb:70:in `map'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/list.rb:70:in `_perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/script/node.rb:40:in `perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:298:in `visit_prop'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `map'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:320:in `visit_rule'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:227:in `block in visit_import'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:227:in `map'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:227:in `visit_import'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `map'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:128:in `visit_root'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/root_node.rb:20:in `render'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:315:in `_render'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:262:in `render'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `block (2 levels) in compile'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `block in compile'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `block (2 levels) in run'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `block in run'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/update_project.rb:45:in `perform'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:30:in `block in <top (required)>'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `call'
+/usr/local/Cellar/ruby/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `<top (required)>'
+/usr/local/Cellar/ruby/1.9.3-p327/bin/compass:23:in `load'
+/usr/local/Cellar/ruby/1.9.3-p327/bin/compass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Undefined variable: \"$light-gray\".\A         on line 80 of /Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/base/_forms.scss\A         from line 6 of /Users/paulcpederson/Documents/Projects/Map-Attack-Web/app/scss/main.scss"; }
