--- a/app/scss/base/_buttons.scss
+++ b/app/scss/base/_buttons.scss
@@ -1,7 +1,6 @@
 .btn {
   display: inline-block;
   padding: 1em;
-  margin-top: 1em;
   background-color: $red;
   color: $white;
   @include border-radius(3px);
@@ -9,14 +8,25 @@
   text-decoration: none;
   font-family: $body-font;
   font-size: 0.85rem;
-  @include transition(background-color 200ms linear);
+  cursor: pointer;
+  @include transition(background-color 50ms linear);
   &:hover {
-    background-color: darken($red, 10%);
+    background-color: darken($red, 5%);
   }
   &.blue {
     background-color: $blue;
     &:hover {
-      background-color: darken($blue, 10%);
+      background-color: darken($blue, 5%);
     }
+  }
+  &.cream {
+    background-color: $cream;
+    color: $blue;
+    &:hover {
+      background-color: darken($cream, 5%);
+    }
+  }
+  &.margin {
+    margin-right: 2em;
   }
 }
