--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -1,13 +1,16 @@
 // UI Colors
 $white:          #ffffff !default;
 $off-white:      #fefefe !default;
-$cream:          #FFFBF2 !default;
-
-$blue:           #5498E8 !default;
-$red:            #F54130 !default;
+$light-gray:     #dddddd !default;
 
 $dark-gray:      #30302F !default;
 $darker-gray:    #242323 !default;
+$darkest-gray:   #222222 !default;
+
+$cream:          #FFFBF2 !default;
+$blue:           #5498E8 !default;
+$red:            #F54130 !default;
+
 
 // Font Families
 $body-font:      "Open Sans", Arial, Helvetica, sans !default;
@@ -23,5 +26,5 @@ $body-color:     $darker-gray;
 $header-color:   $dark-gray;
 
 // Font Sizes
-$body-size:      14px;
-$header-size:    36px;
+$body-size:      1em;
+$header-size:    3em;
