--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -1,6 +1,26 @@
-.panel {
+.nav-wrap {
+  width: 100%;
+  background-color: $white;
+}
+
+.top-nav {
+  padding: 1em 0;
   max-width: 1080px;
   margin: 0 auto;
+  h1 {
+    display: inline-block;
+    font-size: 1.5em;
+    line-height: 2em;
+    float: left;
+  }
+  nav {
+    display: inline-block;
+    float:right;
+  }
+  @include clearfix();
+}
+
+.panel {
   padding: 3em 1em;
   background-color: $white;
   color: $dark-gray;
@@ -15,5 +35,85 @@
   &.blue {
     background-color:$blue;
     color: $white;
+  }
+  section {
+    max-width: 1080px;
+    margin: 0 auto;
+  }
+  header {
+    @extend .clearfix;
+    margin-bottom: 1em;
+    h2 {
+      margin-top: 0;
+      display: inline-block;
+      float: left;
+    }
+    .btn {
+      float: right;
+    }
+  }
+
+}
+
+.feature {
+  width: 100%;
+  margin: 3em 0;
+  @extend .clearfix;
+  .graphic {
+    width: 50%;
+    margin-right: 5%;
+    float: left;
+    display: inline-block;
+  }
+  .copy {
+    width: 45%;
+    float:right;
+    display: inline-block;
+  }
+}
+
+video, img {
+  width: 100%    !important;
+  height: auto   !important;
+}
+
+// Mini Inline-Block Grid
+
+.col {
+    display: block;
+    float: left;
+    position: relative;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.col1of1 { float: none; }
+.col1of2 { width: 50%; }
+.col1of3 { width: 33.33333%; }
+.col2of3 { width: 66.66666%; }
+.col1of4 { width: 25%; }
+.col3of4 { width: 75%; }
+.col1of5 { width: 20%; }
+.col2of5 { width: 40%; }
+.col3of5 { width: 60%; }
+.col4of5 { width: 80%; }
+
+.col-group {
+  font-family: 'Courier New', Monospace;
+  letter-spacing: -.65em;
+  margin-left: -15px;
+  margin-right: -15px;
+  text-align: left;
+  .col {
+    display: inline-block;
+    float: none;
+    font-family: $body-font;
+    letter-spacing: normal;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+    text-align: left;
+    vertical-align: top;
   }
 }
