--- a/app/scss/base/_mixins.scss
+++ b/app/scss/base/_mixins.scss
@@ -24,3 +24,18 @@
 .gt-hide {
   display: none;
 }
+
+@mixin clearfix(){
+  &:before,
+  &:after {
+      content:"";
+      display:table;
+  }
+  &:after {
+      clear:both;
+  }
+}
+
+.clearfix {
+  @include clearfix();
+}
