--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -6,6 +6,9 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+body {
+  margin: 0;
+}
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
 audio[controls], canvas, video { display: inline-block; zoom: 1; }
 a:hover, a:active { outline: 0; }
