--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -21,3 +21,9 @@
 
   }
 }
+
+.high-five {
+  background:url('../img/points.svg') center center no-repeat;
+  background-size: cover;
+  text-align: center;
+}
