--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -14,13 +14,13 @@ $dark-blue:      #1E6ACA !default;
 
 
 // Font Families
-$body-font:      "Open Sans", Arial, Helvetica, sans !default;
-$header-font:    "Open Sans", Arial, Helvetica, sans !default;
-$button-font:    "Open Sans", Arial, Helvetica, sans !default;
+$body-font:      "Karla", Arial, Helvetica, sans !default;
+$header-font:    "Mensch", Arial, Helvetica, sans !default;
+$button-font:    "Karla", Arial, Helvetica, sans !default;
 
 // Font Weights
 $body-weight:    400 !default;
-$header-weight:  600 !default;
+$header-weight:  400 !default;
 
 // Font Colors
 $body-color:     $darker-gray;
