--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -76,8 +76,8 @@
 }
 
 video, img {
-  width: 100%    !important;
-  height: auto   !important;
+  width: 100%;
+  height: auto;
 }
 
 // Mini Inline-Block Grid
