--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -1,4 +1,28 @@
 /* - - - - - - - - - Basic Typography - - - - - - - */
+@import url(http://fonts.googleapis.com/css?family=Karla);
+
+@font-face {
+    font-family: 'Mensch';
+    src: url('../fonts/mensch-wf.eot');
+    src: url('../fonts/mensch-wf.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/mensch-wf.woff') format('woff'),
+         url('../fonts/mensch-wf.ttf') format('truetype'),
+         url('../fonts/mensch-wf.svg#MenschMenschRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Mensch Bold';
+    src: url('../fonts/mensch-bold-wf.eot');
+    src: url('../fonts/mensch-bold-wf.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/mensch-bold-wf.woff') format('woff'),
+         url('../fonts/mensch-bold-wf.ttf') format('truetype'),
+         url('../fonts/mensch-bold-wf.svg#MenschMenschBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   font-family: $body-font;
   color: $body-color;
