--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Map Attack</title>
+    <title>Map Attack | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -22,32 +22,16 @@
       <header class="top-nav">
         <h1>Map Attack</h1>
         <nav>
-          <a href="/auth/twitter" class="btn blue">Log In</a>
+          <a href="/logout" class="btn blue">want to logout, <img src="<%= user.photos[0].value %>" width="12"> <%= user.username %>?</a>
         </nav>
       </header>
-    </div>
-    <div class="hero">
-    </div>
-    <div class="panel cream">
-      <section>
-        <blockquote>A social game of human pacman.</blockquote>
-        <div class="feature">
-          <div class="graphic">
-            <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
-          </div>
-          <div class="copy">
-            <h3>In a Nutshell</h3>
-            <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
-          </div>
-        </div>
-      <section>
     </div>
 
     <div class="panel red">
       <section>
         <header>
           <h2>1. Make a Board</h2>
-          <a class="btn cream">Go Build One</a>
+          <a class="btn cream">Go Board</a>
         </header>
         <div class="board-gallery col-group">
           <div class="col col1of3">
@@ -89,36 +73,6 @@
         </div>
         <a class="btn cream" href="/upload-board">Upload Your Board</a>
       </section>
-    </div>
-
-    <div class="panel cream">
-      <section>
-        <h2>2. Get the App</h2>
-        <div class="feature">
-          <div class="graphic">
-            <img src="/img/apps.png">
-          </div>
-          <div class="copy">
-            <h3>Available Everywhere</h3>
-            <p>
-              The Map Attack app is available in both the Apple App Store and on Google Play.
-            </p>
-            <p>
-              <a href="android-store" class="btn red margin">Get the Android Version</a>
-              <a href="mac-store" class="btn blue">Get the iOS Version</a>
-            </p>
-          </div>
-        </div>
-      <section>
-    </div>
-
-    <div class="panel blue high-five">
-      <section>
-        <h2>3. Have Way Too Much Fun</h2>
-        <p class="large">
-          Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
-        </p>
-      <section>
     </div>
 
     <!-- build:js js/vendor.js -->
