--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   <![endif]-->
     <div class="nav-wrap">
       <header class="top-nav">
-        <h1>Map Attack</h1>
+        <h1><span class="blue">Map</span> <span class="red">Attack</span></h1>
         <nav>
           <% if (!user) { %>
             <a href="/auth/twitter" class="btn blue">Log In</a>
@@ -34,13 +34,13 @@
     </div>
     <div class="panel cream">
       <section>
-        <blockquote>A social game of human pacman.</blockquote>
+        <blockquote class="blue">A social game of human pacman.</blockquote>
         <div class="feature">
           <div class="graphic">
             <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
           </div>
           <div class="copy">
-            <h3>In a Nutshell</h3>
+            <h3 class="blue">In a Nutshell</h3>
             <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
           </div>
         </div>
