--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   <![endif]-->
     <div class="nav-wrap">
       <header class="top-nav">
-        <h1><span class="blue">Map</span> <span class="red">Attack</span></h1>
+        <h1 class="logo"><span class="blue">Map</span> <span class="red">Attack</span></h1>
         <nav>
           <% if (!user) { %>
             <a href="/auth/twitter" class="btn blue">Log In</a>
