--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,8 +40,8 @@
             <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
           </div>
           <div class="copy">
-            <h3 class="blue">In a Nutshell</h3>
-            <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
+            <h3 class="blue">Map Attack in a Nutshell</h3>
+            <p>Two teams compete to capture the most points on the gameboard. The gameboard, in this case, is the city streets of the neighborhood the players are in. To play, all you need is a phone (Android running 2.2 or later and iPhone 3GS or later) a city street, park or college campus, and some friends.</p>
           </div>
         </div>
       <section>
