--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,144 +1,94 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Map Attack</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- endbuild -->
-  </head>
-  <body>
-  <!--[if lt IE 10]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-    <div class="nav-wrap">
-      <header class="top-nav">
-        <h1>Map Attack</h1>
-        <nav>
-          <a href="/auth/twitter" class="btn blue">Log In</a>
-        </nav>
-      </header>
-    </div>
-    <div class="hero">
-    </div>
-    <div class="panel cream">
-      <section>
-        <blockquote>A social game of human pacman.</blockquote>
-        <div class="feature">
-          <div class="graphic">
-            <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
-          </div>
-          <div class="copy">
-            <h3>In a Nutshell</h3>
-            <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
-          </div>
-        </div>
-      <section>
-    </div>
+<div class="hero"></div>
 
-    <div class="panel red">
-      <section>
-        <header>
-          <h2>1. Make a Board</h2>
-          <a class="btn cream">Go Build One</a>
-        </header>
-        <div class="board-gallery col-group">
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-          <div class="col col1of3">
-            <figure>
-              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-            </figure>
-          </div>
-        </div>
-        <a class="btn cream" href="/upload-board">Upload Your Board</a>
-      </section>
+<div class="panel cream">
+  <section>
+    <blockquote>A social game of human pacman.</blockquote>
+    <div class="feature">
+      <div class="graphic">
+        <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
+      </div>
+      <div class="copy">
+        <h3>In a Nutshell</h3>
+        <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
+      </div>
     </div>
+  <section>
+</div>
 
-    <div class="panel cream">
-      <section>
-        <h2>2. Get the App</h2>
-        <div class="feature">
-          <div class="graphic">
-            <img src="/img/apps.png">
-          </div>
-          <div class="copy">
-            <h3>Available Everywhere</h3>
-            <p>
-              The Map Attack app is available in both the Apple App Store and on Google Play.
-            </p>
-            <p>
-              <a href="android-store" class="btn red margin">Get the Android Version</a>
-              <a href="mac-store" class="btn blue">Get the iOS Version</a>
-            </p>
-          </div>
-        </div>
-      <section>
+<div class="panel red">
+  <section>
+    <header>
+      <h2>1. Make a Board</h2>
+      <a class="btn cream">Go Build One</a>
+    </header>
+    <div class="board-gallery col-group">
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+      <div class="col col1of3">
+        <figure>
+          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
     </div>
+    <a class="btn cream" href="/upload-board">Upload Your Board</a>
+  </section>
+</div>
 
-    <div class="panel blue high-five">
-      <section>
-        <h2>3. Have Way Too Much Fun</h2>
-        <p class="large">
-          Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
+<div class="panel cream">
+  <section>
+    <h2>2. Get the App</h2>
+    <div class="feature">
+      <div class="graphic">
+        <img src="/img/apps.png">
+      </div>
+      <div class="copy">
+        <h3>Available Everywhere</h3>
+        <p>
+          The Map Attack app is available in both the Apple App Store and on Google Play.
         </p>
-      <section>
+        <p>
+          <a href="android-store" class="btn red margin">Get the Android Version</a>
+          <a href="mac-store" class="btn blue">Get the iOS Version</a>
+        </p>
+      </div>
     </div>
+  <section>
+</div>
 
-    <!-- build:js js/vendor.js -->
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-
-    <!-- build:js js/main.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
-  </body>
-</html>
+<div class="panel blue high-five">
+  <section>
+    <h2>3. Have Way Too Much Fun</h2>
+    <p class="large">
+      Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
+    </p>
+  <section>
+</div>
