reimplement style tweaks from this morning

--- a/views/_nav.ejs
+++ b/views/_nav.ejs
@@ -1,6 +1,6 @@
 <div class="nav-wrap">
   <header class="top-nav">
-    <h1>Map Attack</h1>
+    <h1><span class="blue">Map</span> <span class="red">Attack</span></h1>
     <nav>
       <% if (typeof user === 'undefined') { %>
         <a href="/auth/twitter" class="btn blue">Log In</a>
