--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="panel cream">
   <section>
-    <blockquote>A social game of human pacman.</blockquote>
+    <blockquote class="blue">A social game of human pacman.</blockquote>
     <div class="feature">
       <div class="graphic">
         <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
