add markup for logged in home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,47 +1,48 @@
-<div class="panel red">
+<div class="panel cream">
   <section>
     <header>
-      <h2>1. Make a Board</h2>
-      <a class="btn cream">Go Board</a>
+      <h2>My Boards</h2>
+      <a class="btn blue">New Board</a>
     </header>
-    <div class="board-gallery col-group">
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
+    <ul class="boards">
+      <li><a href="/board-id/edit">Board Title</a></li>
+      <li><a href="/board-id/edit">Board Title</a></li>
+      <li><a href="/board-id/edit">Board Title</a></li>
+      <li><a href="/board-id/edit">Board Title</a></li>
+    </ul>
+  </section>
+</div>
+
+<div class="panel cream">
+  <section>
+    <header>
+      <h2>Boards Around You</h2>
+    </header>
+    <ul class="boards">
+      <li><a href="/board-id/view">Board Title</a></li>
+      <li><a href="/board-id/view">Board Title</a></li>
+      <li><a href="/board-id/view">Board Title</a></li>
+      <li><a href="/board-id/view">Board Title</a></li>
+    </ul>
+  </section>
+</div>
+
+<div class="panel cream">
+  <section>
+    <header>
+      <h2>Games In Progress</h2>
+    </header>
+    <div class="games">
+      <div class="game">
+        <a href="/game/view">Board Title</a>
+        <div class="hours">Started at 4:30pm</div>
+        <div class="players">12 players</div>
       </div>
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-      </div>
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-      </div>
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-      </div>
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-      </div>
-      <div class="col col1of3">
-        <figure>
-          <img src="/img/board.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
+      <div class="game">
+        <a href="/game/view">Board Title</a>
+        <div class="hours">Started at 4:30pm</div>
+        <div class="players">12 players</div>
       </div>
     </div>
-    <a class="btn cream" href="/upload-board">Upload Your Board</a>
   </section>
 </div>
