--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -37,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $header-weight;
   font-size: $header-size;
   margin: 1em 0 0.5em 0;
+  text-transform: none;
   &.red {
     color: $red;
   }
