--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -4,7 +4,7 @@
 }
 
 .top-nav {
-  padding: 1em 0;
+  padding: 1em 0 0.5em 0;
   max-width: 1080px;
   margin: 0 auto;
   h1 {
@@ -12,6 +12,11 @@
     font-size: 1.5em;
     line-height: 2em;
     float: left;
+    span:first-child {
+      // margin: 0;
+      // float: left;
+      margin-right: -0.25em;
+    }
     &:before {
       content: "";
       display: inline-block;
@@ -26,6 +31,17 @@
   nav {
     display: inline-block;
     float:right;
+    width: auto;
+    img {
+      @include border-radius(26px, 26px);
+      border: 4px solid $blue;
+      display: inline;
+      float: left;
+      margin-top: -4px;
+    }
+    a {
+      margin-left: 18px;
+    }
   }
   @include clearfix();
 }
