--- a/views/_nav.ejs
+++ b/views/_nav.ejs
@@ -5,7 +5,8 @@
       <% if (typeof user === 'undefined') { %>
         <a href="/auth/twitter" class="btn blue">Log In</a>
       <% } else if (user) { %>
-        <a href="/logout" class="btn blue">want to logout, <img src="<%= user.photos[0].value %>" width="12"> <%= user.username %>?</a>
+        <img src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
+        <a href="/logout" class="btn red">logout</a>
         </p>
       <% } %>
     </nav>
