--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,7 @@
   <section>
     <header>
       <h2 class="red">Boards Around You</h2>
+      <input class="col col1of3" placeholder="Portland"></input>
     </header>
     <ul class="boards red">
       <li><a href="/board-id/view">Board Title</a></li>
