--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,7 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <% include _nav %>
+  <%- partial('partials/_nav') %>
 
   <%- body -%>
 
@@ -29,15 +29,7 @@
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
-  </script>
+  <%- partial('partials/_ga') %>
 
   <!-- build:js js/main.js -->
   <script src="/js/main.js"></script>
