--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -14,6 +14,7 @@
     font-size: 1.5em;
     line-height: 2em;
     float: left;
+    margin-right: 2.5em;
     &:before {
       content: "";
       display: inline-block;
