--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -1,6 +1,6 @@
 <div class="nav-wrap">
   <header class="top-nav">
-    <a class="brand" href="/">Map Attack</a>
+    <a class="brand" href="/"><span class="blue">Map</span> <span class="red">Attack</span></a>
     <% if (authenticated) { %>
     <nav class="left">
       <a href="/editor" class="btn blue">editor</a>
